--- a/task2/package.json
+++ b/task2/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@syncfusion/ej2-react-calendars": "^20.2.38",
     "@types/styled-components": "^5.1.25",
     "next": "12.2.2",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.5"
   },
